--- a/task-manager/package.json
+++ b/task-manager/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.12",
     "multer": "^1.4.2",
+    "sharp": "^0.23.4",
     "validator": "^10.9.0"
   },
   "devDependencies": {
